--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -10,7 +10,17 @@ can be found in the LICENSE file at https://angular.io/license
 <div *ngFor="let product of products">
 
   <h3>
+    <a [title]="product.name + ' details'">
       {{ product.name }}
+    </a>
   </h3>
+
+  <p *ngIf="product.description">
+    {{product.description}}
+  </p>
+
+  <button (click)="share()">
+    share
+  </button>
 
 </div>
