Pass data between parent and children

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -23,4 +23,10 @@ can be found in the LICENSE file at https://angular.io/license
     share
   </button>
 
+  <app-product-alerts
+  [product]="product"
+  (notify)="onNotify()"
+  >
+  </app-product-alerts>
+
 </div>
